public/assets/main.css
/* ... */
/* END NAVBAR */

/* BEGIN LOADING-BAR */
#loading-bar .bar {
  top: 52px; /* right below the navbar (height + borders) */
}
/* END LOADING-BAR */

/* BEGIN HOME */
.jumbotron {
  text-align: center;
}
.jumbotron-home {
  background-image: url('featurette/jumbo.jpg');
  background-repeat: no-repeat;
  background-position: center;
}
.jumbotron-home h1 {
  margin-top: 0;
}
.jumbotron h1 small,
.jumbotron-home h3 {
  color: #99A2AA;
}
.jumbotron-home h1,
.jumbotron-home h2,
.jumbotron-home h3 {
  text-shadow: 2px 2px 10px black;
}
.jumbotron-home p {
  margin-top: 30px;
}
.featurette, .featurette-divider {
  margin: 80px 0; /* Space out the Bootstrap <hr> more */
}
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -1px; /* Thin out the marketing headings */
}
.featurette-image {
  margin: 0 auto;
  background-color: #000000;
}
@media (min-width: 768px) {
  .featurette-heading {
    font-size: 50px;
  }
}

@media (min-width: 992px) {
  .featurette-heading {
    margin-top: 120px;
  }
  .featurette-image-pull-right {
     float: right !important;
  }
  .featurette-image-pull-left {
    float: left !important;
  }
}
/* END HOME */

/* BEGIN SUBSCRIPTION */
.has-feedback .control-label-hidden .control-label,
.has-feedback .form-control-feedback {
  display: none;
}
.has-feedback.has-error .control-label-hidden .control-label {
  display: inline-block;
}
.has-feedback.has-error .form-control-feedback.feedback-error,
.has-feedback.has-success .form-control-feedback.feedback-success {
  display: block;
}
.has-feedback .form-control-feedback.feedback-select {
  right: 30px;
}
.form-group .alert {
  margin: 0;
}
.progress .progress-bar-loading {
  width: 100%;
  text-shadow: 1px 1px 4px black;
}
/* END SUBSCRIPTION */

/* BEGIN LOGIN */
.form-login {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
}
.form-login .alert {
  margin-bottom: 10px;
}
.form-login button {
  padding: 10px 16px;
  margin-bottom: 10px;
}
.form-login .form-control {
  position: relative;
  height: auto;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  padding: 10px;
  font-size: 16px;
}
.form-login .form-control:focus {
  z-index: 2;
}
.form-login input[type="email"] {
  margin-bottom: -1px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}
.form-login input[type="password"] {
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
/* END LOGIN */

/* BEGIN TIMER */
.header-with-timer {
  margin-bottom: 10px;
}
.header-with-timer h1 {
  margin-top: 0;
  margin-bottom: 0;
}
.timer {
  cursor:help;
}
/* BEGIN TIMER */

/* BEGIN CHECKOUT-BREADCRUMB */
.checkout-breadcrumb-container {
  float: left;
  width: 100%;
  text-align: center;
}
/* source: http://thecodeplayer.com/walkthrough/css3-breadcrumb-navigation */
.checkout-breadcrumb {
  display: inline-block;
  box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.35);
  overflow: hidden;
  border-radius: 5px;
  counter-reset: flag; /* lets add the numbers for each link using CSS counters. flag is the name of the counter. to be defined using counter-reset in the parent element of the links. */
}
.checkout-breadcrumb a,
.checkout-breadcrumb span {
  text-decoration: none;
  outline: none;
  display: block;
  float: left;
  font-size: 12px;
  line-height: 32px;
  color: white;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
  padding: 0 10px 0 55px; /* need more margin on the left of links to accomodate the numbers */
  background-color: #3a3f44;
  background-image: -webkit-linear-gradient(#484e55, #3a3f44 60%, #313539);
  background-image: -o-linear-gradient(#484e55, #3a3f44 60%, #313539);
  background-image: linear-gradient(#484e55, #3a3f44 60%, #313539);
  background-repeat: no-repeat;
  -webkit-filter: none;
  filter: none;
  position: relative;
}
.checkout-breadcrumb a:first-child,
.checkout-breadcrumb span:first-child {
  padding-left: 40px; /* since the first link does not have a triangle before it we can reduce the left padding to make it look consistent with other links */
  border-radius: 5px 0 0 5px; /* to match with the parent's radius */
}
.checkout-breadcrumb a:first-child:before,
.checkout-breadcrumb span:first-child:before {
  left: 14px;
}
.checkout-breadcrumb a:last-child,
.checkout-breadcrumb span:last-child {
  padding-right: 20px;
  border-radius: 0 5px 5px 0; /* this was to prevent glitches on hover */
}
.checkout-breadcrumb a.success,
.checkout-breadcrumb span.success {
  background-image: -webkit-linear-gradient(#78cc78, #62c462 60%, #53be53);
  background-image: -o-linear-gradient(#78cc78, #62c462 60%, #53be53);
  background-image: linear-gradient(#78cc78, #62c462 60%, #53be53);
  background-repeat: no-repeat;
}
.checkout-breadcrumb a.success:hover {
  background-image: -webkit-linear-gradient(#2f7d2f, #379337 40%, #3da23d);
  background-image: -o-linear-gradient(#2f7d2f, #379337 40%, #3da23d);
  background-image: linear-gradient(#2f7d2f, #379337 40%, #3da23d);
  background-repeat: no-repeat;
}
.checkout-breadcrumb a.active,
.checkout-breadcrumb span.active {
  background-image: -webkit-linear-gradient(#74cae3, #5bc0de 60%, #4ab9db);
  background-image: -o-linear-gradient(#74cae3, #5bc0de 60%, #4ab9db);
  background-image: linear-gradient(#74cae3, #5bc0de 60%, #4ab9db);
  background-repeat: no-repeat;
}
.checkout-breadcrumb a.active:hover {
  background-image: -webkit-linear-gradient(#20829f, #2596b8 40%, #28a4c9);
  background-image: -o-linear-gradient(#20829f, #2596b8 40%, #28a4c9);
  background-image: linear-gradient(#20829f, #2596b8 40%, #28a4c9);
  background-repeat: no-repeat;
}
/* ... */

